# protobufs

./: .gitignore  CMakeLists.txt  README.md  buf.gen.yaml  buf.yaml  device-api.proto  device_adc.options  device_adc.proto  device_vfd.proto  discovery.options  discovery.proto  enums.proto  heartbeat.proto  idf_component.yml  kd_global.proto  kd_keyloq.proto  kd_lantern.proto  kd_matrx.proto  lantern.proto  levimesh.options  levimesh.proto  levitree.options  levitree.proto  levitree_cpcd.options  levitree_cpcd.proto
.github/workflows/: build.yml  ci.yml  lint.yml
docs/: CHANGELOG.md  MIGRATION.md  PROTOCOL.md  QUICK_REFERENCE.md
nanopb/: device_adc.pb.c  device_adc.pb.h  device_vfd.pb.c  device_vfd.pb.h  discovery.pb.c  discovery.pb.h  enums.pb.c  enums.pb.h  heartbeat.pb.c  heartbeat.pb.h  levitree.pb.c  levitree.pb.h
proto/: device_efc.options  device_efc.proto  device_rover.proto  device_vfd.proto  enums.proto  firmware_update.proto  levitree.proto
proto/common/: enums.proto  types.options  types.proto
proto/core/: heartbeat.proto  routing.options  routing.proto  system.proto
proto/devices/: device_adc.options  device_adc.proto  device_common.options  device_common.proto  device_digital_output.proto  device_modbus_bridge.options  device_modbus_bridge.proto  device_routing.options  device_routing.proto  device_rover.proto  device_vfd.proto
proto/kd/v1/: common.options  common.proto  console.proto  enums.proto  kd_lantern.proto  matrx.options  matrx.proto  nemoto.options  nemoto.proto  tranquil.options  tranquil.proto
proto/ringbahn/v1/: device_adc.proto  device_common.proto  device_digital_output.options  device_digital_output.proto  device_modbus_bridge.proto  device_routing.proto  device_rover.proto  enums.proto  types.options  types.proto
proto/services/: discovery.options  discovery.proto  firmware_update.options  firmware_update.proto
scripts/: generate.sh  validate.sh
